--- a/Assignment-14/index.html
+++ b/Assignment-14/index.html
@@ -13,28 +13,28 @@
 <header class="styles">
   <link rel="stylesheet" href="./CSS/style.css" type="text/css" />
 <body>
-  <nav class="navbar has-shadow" id="header">
+  <nav class="navbar has-shadow is-centered" id="header">
     <div class="container-1100px">
      
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler is-centered" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-        <div class="menu-item">
+        <div class="menu-item is-centered">
           <a href="index.html">General Info</a>
         </div> 
-        <div class="menu-item">
+        <div class="menu-item is-centered">
           <a href="fly.html">Butterfly</a>
         </div>
-        <div class="menu-item">
+        <div class="menu-item is-centered">
           <a href="back.html">Backstroke</a>
         </div> 
-        <div class="menu-item">
+        <div class="menu-item is-centered">
           <a href="br.html">Breaststroke</a>
         </div>
-        <div class="menu-item">
+        <div class="menu-item is-centered">
           <a href="free.html">Freestyle</a>
         </div>
-        <div class="menu-item">
+        <div class="menu-item is-centered">
           <a href="drawing.html">Drawing Page</a>
         </div>
 
@@ -47,21 +47,6 @@
     <h1>Swimming General Information</h1> 
   </div> 
 
-  <section class="container">
-      <div id="toolbar">
-        <h1>draw</h1>
-        <label for="stroke">Stroke</label>
-        <input id="stroke" name='stroke' type="color">
-        <label for="lineWidth">Line Width</label>
-        <input id="lineWidth" name='lineWidth' type="number" value="5">
-        <button id="clear">Clear</button>
-      </div>
-      <div class="Drawing-Board">
-        <canvas id="Drawing-Board"></canvas>
-      </div>
-  </section>
-  <script src=".index.js"></script>
-
     <div class= "is-size-4 pt-0">   
         <p>Swimming is a life long skill that majority of kids learn. Besides the main stroke, some refer to it as front crawl, kids in lessons learn basic life skills. Once they move up to the swim team coaches work with kids to teach all four strokes. The strokes are butterfly, backstroke, breaststroke, and freestyle. Along with strokes we learn a variety of skills that are listed below.</p>
         <li>Flip turns</li>
@@ -73,8 +58,7 @@
         <li>Fun!</li>
     </div>
 
-        <canvas id="swim" height="400" width="300"></canvas>
-      <script src="images/swim.jpeg"></script>
+      <img src="images/swim.jpeg" width="300px" heigth="250px" float="right"/>
 
     <div class="is-size-4 pt-0">
         <p>Sign up for swimming here: <a href="https://www.gomotionapp.com/team/mtmac/page/home">MAC Site</a></p>
