--- a/Assignment-14/free.html
+++ b/Assignment-14/free.html
@@ -44,8 +44,6 @@
 </header>
 
 <div class="free">
-    
-    <img src="../images/freestyle.jpeg" width="300px" height="250px">
 
 </div>
 <div class="is-size-1 is-bold has-text-centered">
@@ -53,7 +51,7 @@
 </div>    
     <div class="is-size-4">  
      Freestyle is the most simple stroke. The stroke encompasses a single arm movement over the head. The stroke envolves a scissor style kick that comes from power of the core and hips. The arms use the back muscles primarly to generate a powerfull pull. Drills are commonly used for kids to learn the strokes fundamentals. Drills can range from learning the pull in the water or the arm recovery. 
-    <iframe class="free is-centered" width="560" height="315" src="https://www.youtube.com/embed/AQy_c30lNjI?si=z8-caGe7kQR3Ke0c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe class="free is-centered" width="560" height="315" src="https://www.youtube.com/embed/AQy_c30lNjI?si=z8-caGe7kQR3Ke0c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen float="right"></iframe>
     </div>
 
 </body>
